--- a/templates/index.jinja
+++ b/templates/index.jinja
@@ -1,28 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - SAFS</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-</head>
-
-<body class="p-4 text-bg-light">
-    <header class="d-flex justify-content-center">
-        <h1>Welcome to SAFS</h1>
-    </header>
-    <ul class="list-group">
-        <li class="list-group-item">
-            <a href="{{ url_for('choose_metrics') }}">
-                <h3>Choose Metrics</h3>
-            </a>
-        </li>
-    </ul>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+{% extends "base.jinja" %}
+{% block title %}
+  Home
+{% endblock title %}
+{% block header %}
+  Welcome to SAFS
+{% endblock header %}
+{% block content %}
+  <ul class="list-group">
+    <li class="list-group-item">
+      <a href="{{ url_for('choose_metrics') }}">
+        <h2>Metrics</h2>
+      </a>
+    </li>
+  </ul>
+{% endblock content %}
