--- a/templates/index.jinja
+++ b/templates/index.jinja
@@ -8,7 +8,7 @@
 {% block content %}
   <ul class="list-group">
     <li class="list-group-item">
-      <a href="{{ url_for('choose_metrics') }}">
+      <a href="{{ url_for('metrics.get_metrics_form') }}">
         <h2>Metrics</h2>
       </a>
     </li>
