--- a/templates/macros.jinja
+++ b/templates/macros.jinja
@@ -16,7 +16,7 @@
             name="action"
             value="{{ action }}">{{ button_text }}</button>
   </div>
-  {% if error %}<div class="alert alert-danger mt-3" role="alert">{{ error }}</div>{% endif %}
+  {% if error %}<div id="{{ name }}-error" class="alert alert-danger mt-3" role="alert">{{ error|e }}</div>{% endif %}
 {% endmacro %}
 
 {% macro section(name) %}
@@ -25,34 +25,20 @@
   </section>
 {% endmacro %}
 
-{% macro list_group(input_name, items, checked_items=None, name_prefix='', script="") %}
+{% macro list_group(input_name, items, name_prefix='') %}
   <ul class="list-group">
-    {% if checked_items %}
-      {% for item in items %}
-        {% if item in checked_items %}
-          {{ _list_group_item(input_name, item, name_prefix, "checked", script) }}
-        {% else %}
-          {{ _list_group_item(input_name, item, name_prefix) }}
-        {% endif %}
-      {% endfor %}
-    {% else %}
-      {% for item in items %}{{ _list_group_item(input_name, item, name_prefix) }}{% endfor %}
-    {% endif %}
+    {% for item in items %}
+      <li class="list-group-item text-bg-light">
+        <input id="{{ name_prefix }}{{ item }}"
+               class="form-check-input me-1"
+               type="checkbox"
+               name="{{ input_name }}"
+               value="{{ item }}" />
+        <label class="form-check-label stretched-link"
+               for="{{ name_prefix }}{{ item }}">{{ item }}</label>
+      </li>
+    {% endfor %}
   </ul>
-{% endmacro %}
-
-{% macro _list_group_item(input_name, item, name_prefix, checked="", script="" ) %}
-  <li class="list-group-item text-bg-light">
-    <input id="{{ name_prefix }}{{ item }}"
-           class="form-check-input me-1"
-           type="checkbox"
-           name="{{ input_name }}"
-           value="{{ item }}"
-           {{ checked }} />
-    <label class="form-check-label stretched-link"
-           for="{{ name_prefix }}{{ item }}">{{ item }}</label>
-    {{ script }}
-  </li>
 {% endmacro %}
 
 {% macro metrics_accordion(grouped_metrics, config_data) %}
