--- a/templates/metrics.jinja
+++ b/templates/metrics.jinja
@@ -54,7 +54,11 @@
     {% if directories %}
       {% call section("directories") %}
         <h2>Simulation Directories List:</h2>
-        {{ list_group("directory-list", directories) }}
+        <div class="mb-3">{{ list_group("directory-list", directories) }}</div>
+        <div class="btn-group" role="group" aria-label="Directory Actions">
+          {{ submit_button('Select All', 'select-all-directories', 'btn-outline-primary', class="me-2") }}
+          {{ submit_button('Deselect All', 'deselect-all-directories', 'btn-outline-primary') }}
+        </div>
       {% endcall %}
     {% endif %}
 
@@ -80,13 +84,16 @@
             </div>
           {% endfor %}
         </div>
+        <div class="btn-group" role="group" aria-label="Metrics Actions">
+          {{ submit_button('Select All', 'select-all-metrics', 'btn-outline-primary', class="me-2") }}
+          {{ submit_button('Deselect All', 'deselect-all-metrics', 'btn-outline-primary') }}
+        </div>
       {% endcall %}
     {% endif %}
 
     {% if base_directory and not base_dir_error %}
       {% call section("graph") %}
         <h2>Graph Generation:</h2>
-
         <div class="col">
           <div class="row mb-2">
             {{ select(label="Graph Type:",
@@ -132,8 +139,10 @@
                         ["xx-large", "XX-Large"],
                         ]) }}
           </div>
-          {{ submit_button('Generate Graphs', 'generate-graphs', 'me-2') }}
-          {{ submit_button('Export Results', 'export-results') }}
+          <div class="btn-group" role="group" aria-label="Graph Actions">
+            {{ submit_button('Generate Graphs', 'generate-graphs', 'btn-primary', class="me-2") }}
+            {{ submit_button('Export Results', 'export-results', 'btn-primary') }}
+          </div>
         </div>
       {% endcall %}
     {% endif %}
