--- a/templates/__macros.jinja
+++ b/templates/__macros.jinja
@@ -25,8 +25,8 @@
         <a class="nav-link disabled" aria-disabled="true">Graphs</a>
       </li>
     </ul>
-    <form id="clean-session-form" class="d-flex">
-      {{ submit_button('Clean Session', 'clean-session', 'btn-outline-danger') }}
+    <form id="navbar-form" class="d-flex">
+      {{ submit_button('Clear Session', 'clear-session', 'btn-outline-danger') }}
     </form>
   </div>
 {% endmacro %}
