--- a/templates/metrics.jinja
+++ b/templates/metrics.jinja
@@ -156,7 +156,7 @@
   {% endif %}
 {% endblock content %}
 {% block scripts %}
-  <script src="{{ url_for('static', filename='forms.js') }}"></script>
+  <script src="{{ url_for('static', filename='mainForm.js') }}"></script>
   {% if has_config_data %}<script>
     document.addEventListener("DOMContentLoaded", loadConfig);
 </script>{% endif %}
