--- a/templates/__base.jinja
+++ b/templates/__base.jinja
@@ -12,6 +12,10 @@
       {% endblock title %}
       - SAFS
     </title>
+    <link rel="icon"
+          type="image/svg+xml"
+          href="{{ url_for('static', filename='chart-simple-solid.svg') }}"
+          sizes="any">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
