--- a/templates/metrics.jinja
+++ b/templates/metrics.jinja
@@ -1,5 +1,5 @@
 {% extends "__base.jinja" %}
-{% from "__macros.jinja" import navbarNav, section, submit_button, input_text, select, list_group, metrics_accordion %}
+{% from "__macros.jinja" import navbarNav, section, submit_button, input_text, select, list_group, list_group_text, metrics_accordion %}
 
 {% block title %}
   Metrics
@@ -54,7 +54,8 @@
     {% if directories %}
       {% call section("directories") %}
         <h2>Simulation Directories List:</h2>
-        <div class="mb-3">{{ list_group("directory-list", directories) }}</div>
+        {# <div class="mb-3">{{ list_group("directory-list", directories) }}</div> #}
+        <div class="mb-3">{{ list_group_text("directory-list", directories) }}</div>
         <div class="btn-group" role="group" aria-label="Directory Actions">
           {{ submit_button('Select All', 'select-all-directories', 'btn-outline-primary', class="me-2") }}
           {{ submit_button('Deselect All', 'deselect-all-directories', 'btn-outline-primary') }}
